--- a/www/index.html
+++ b/www/index.html
@@ -33,9 +33,9 @@
             $("#p1").bind("swipeleft", function(){
                 $.mobile.changePage("#p2",{ transition: 'slide'});
             });
-            $("#p1").bind("swiperight", function(){
-                $.mobile.changePage("#p3",{ transition: 'slide', reverse: true });
-            });
+            // $("#p1").bind("swiperight", function(){
+            //     $.mobile.changePage("#p3",{ transition: 'slide', reverse: true });
+            // });
             
             $("#p2").bind("swipeleft", function(){
                 $.mobile.changePage("#p3",{ transition: 'slide'});
@@ -44,9 +44,6 @@
                 $.mobile.changePage("#p1",{ transition: 'slide', reverse: true });
             });
  
-            $("#p3").bind("swipeleft", function(){
-                $.mobile.changePage("#p1",{ transition: 'slide'});
-            });
             $("#p3").bind("swiperight", function(){
                 $.mobile.changePage("#p2",{ transition: 'slide', reverse: true });
             });
@@ -59,7 +56,7 @@
     
 
     <div data-role="page" id="p1">
-        <div data-role="header" data-theme="b" data-position="fixed" data-id="footer">
+        <div data-role="header" data-theme="b" data-position="fixed" data-id="1">
             <div data-role = "navbar">
                 <ul>
                     <li><a href="#p1" class = "ui-btn-active">One</a></li>
@@ -77,7 +74,7 @@
     </div>
 
     <div data-role="page" id="p2">
-        <div data-role="header" data-theme="b" data-position="fixed" data-id="footer">
+        <div data-role="header" data-theme="b" data-position="fixed" data-id="1">
             <div data-role = "navbar">
                 <ul>
                     <li><a href="#p1">One</a></li>
@@ -88,24 +85,59 @@
         </div>
 
         <div data-role="content">
-            <p>Article 2</p>
+            <div>
+                <h3>받은 요청</h3>
+            </div>
+            <ul data-role="listview">
+                <li><a href="acura.html">점심모임</a></li>
+                <li><a href="audi.html">동아리</a></li>
+                <li><a href="bmw.html">학회</a></li>
+            </ul>
+            <div>
+                <h3>그룹 목록</h3>
+            </div>
+            <ul data-role="listview">
+                <li><a href="acura.html">투게쥴</a></li>
+                <li><a href="audi.html">고등학교</a></li>
+                <li><a href="bmw.html">반모임</a></li>
+            </ul>
         </div>
 
     </div>
 
     <div data-role="page" id="p3">
-        <div data-role="header" data-theme="b" data-position="fixed" data-id="footer">
+        <div data-role="header" data-theme="b" data-position="fixed" data-id="1">
             <div data-role = "navbar">
                 <ul>
                     <li><a href="#p1">One</a></li>
-                    <li><a href="#p2" >Two</a></li>
+                    <li><a href="#p2">Two</a></li>
                     <li><a href="#p3" class = "ui-btn-active">Three</a></li>
                 </ul>
             </div>        
         </div>
 
         <div data-role="content">
-            <p>Article 3</p>
+            <div>
+                <h3>받은 요청</h3>
+            </div>
+            <ul data-role="listview">
+                <li><a href="acura.html">홍길동</a></li>
+                <li><a href="audi.html">김삿갓</a></li>
+            </ul>
+            <div>
+                <h3>친구 목록</h3>
+            </div>
+            <ul data-role="listview">
+                <li><a href="acura.html">김다예</a></li>
+                <li><a href="audi.html">손보경</a></li>
+                <li><a href="bmw.html">박준호</a></li>
+                <li><a href="bmw.html">강지혜</a></li>
+                <li><a href="bmw.html">이두희</a></li>
+                <li><a href="bmw.html">남다예</a></li>
+                <li><a href="bmw.html">홍지호</a></li>
+                <li><a href="bmw.html">알렉스</a></li>
+                <li><a href="bmw.html">한영후</a></li>
+            </ul>
         </div>
 
     </div>
