--- a/www/index.html
+++ b/www/index.html
@@ -59,16 +59,36 @@
         <div data-role="header" data-theme="b" data-position="fixed" data-id="1">
             <div data-role = "navbar">
                 <ul>
-                    <li><a href="#p1" class = "ui-btn-active">One</a></li>
-                    <li><a href="#p2">Two</a></li>
-                    <li><a href="#p3">Three</a></li>
+                    <li><a href="#p1" class = "ui-btn-active">내시간표</a></li>
+                    <li><a href="#p2">그룹</a></li>
+                    <li><a href="#p3">친구</a></li>
                 </ul>
             </div>        
         </div>
 
         <div data-role="content">
-            <p>Article 1</p>
-            <a href = "#article2">page 2 로!</a>
+            <table border = "2px solid black" style=" border-collapse: collapse; width:100%;">
+                <tr>
+                    <td></td>
+                    <td>월</td>
+                    <td>화</td> 
+                    <td>수</td> 
+                    <td>목</td> 
+                    <td>금</td> 
+                    <td>토</td> 
+                    <td>일</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td></td>
+                    <td></td> 
+                    <td></td> 
+                    <td></td> 
+                    <td></td> 
+                    <td></td> 
+                    <td></td>
+                </tr>
+            </table>
         </div>
 
     </div>
@@ -77,9 +97,9 @@
         <div data-role="header" data-theme="b" data-position="fixed" data-id="1">
             <div data-role = "navbar">
                 <ul>
-                    <li><a href="#p1">One</a></li>
-                    <li><a href="#p2" class = "ui-btn-active">Two</a></li>
-                    <li><a href="#p3">Three</a></li>
+                    <li><a href="#p1">내시간표</a></li>
+                    <li><a href="#p2" class = "ui-btn-active">그룹</a></li>
+                    <li><a href="#p3">친구</a></li>
                 </ul>
             </div>        
         </div>
@@ -109,9 +129,9 @@
         <div data-role="header" data-theme="b" data-position="fixed" data-id="1">
             <div data-role = "navbar">
                 <ul>
-                    <li><a href="#p1">One</a></li>
-                    <li><a href="#p2">Two</a></li>
-                    <li><a href="#p3" class = "ui-btn-active">Three</a></li>
+                    <li><a href="#p1">내시간표</a></li>
+                    <li><a href="#p2">그룹</a></li>
+                    <li><a href="#p3" class = "ui-btn-active">친구</a></li>
                 </ul>
             </div>        
         </div>
