--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
      <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/jquery.mobile-1.4.5.min.js"></script>  
+    <script src="js/jquery.mobile-1.4.5.js"></script>  
 
   <script>
     <!-- 이벤트 처리 -->
@@ -89,6 +89,7 @@
                     <td></td>
                 </tr>
             </table>
+            <a href = "timetable.html">home으로 </a>
         </div>
 
     </div>
